# computational_intelligence

./: pyproject.toml
HillClimbing/: hill_climbing.ipynb
lab1/: README.md  gx_utils.py  lab1.ipynb
lab2/: README.md  evolutionary.ipynb
lab3/: README.md  lab3_nim.ipynb  nimply.py  prova.ipynb  task4_lib.py
libs/: utils.py
